@@ -19,8 +19,8 @@
 // ========================================================================
 //
 // File          : $RCSfile: biff.cc,v $
-// Revision      : $Revision: 1.41 $
-// Revision date : $Date: 2005/03/29 21:07:44 $
+// Revision      : $Revision: 1.42 $
+// Revision date : $Date: 2005/04/01 13:24:49 $
 // Author(s)     : Nicolas Rougier
 // Short         : 
 //
@@ -52,6 +52,7 @@
 #include "file.h"
 #include "maildir.h"
 #include "mh.h"
+#include "mh_basic.h"
 #include "imap4.h"
 #include "pop3.h"
 #include "apop.h"
@@ -715,6 +716,9 @@ Biff::xml_end_element (GMarkupParseContext *context,
 			break;
 		case PROTOCOL_MH:
 			mailbox_.push_back (new Mh (this));
+			break;
+		case PROTOCOL_MH_BASIC:
+			mailbox_.push_back (new Mh_Basic (this));
 			break;
 		case PROTOCOL_MAILDIR:
 			mailbox_.push_back (new Maildir (this));
