@@ -18,6 +18,7 @@ Version 2.1.4
    - Bugfix: Don't monitor directory for mh protocol (saves resources)
    - Cleanup of autodetection code for local mailboxes
    - Cleanup of Imap4::command_fetchuid()
+   - Cleanup of mh protocol
 
 
 Version 2.1.3		2005-04-03 23:57
